[package]
name = "group-chat-moderation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
futures = "0.3"
num_cpus = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
